<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.codelibs.fesen</groupId>
	<artifactId>fesen-parent</artifactId>
	<version>0.14.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Fess Search Engine Project</name>
	<description>This project provides Search Engine Software.</description>
	<url>https://github.com/codelibs/fesen</url>
	<inceptionYear>2009</inceptionYear>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<organization>
		<name>CodeLibs</name>
		<url>https://www.codelibs.org/</url>
	</organization>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/codelibs/fesen/issues</url>
	</issueManagement>
	<scm>
		<connection>scm:git:git@github.com:codelibs/fesen.git</connection>
		<developerConnection>scm:git:git@github.com:codelibs/fesen.git</developerConnection>
		<url>git@github.com:codelibs/fesen.git</url>
	</scm>
	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>9</version>
	</parent>
	<modules>
		<module>client/test</module>
		<module>client/rest</module>
		<module>client/rest-client-sniffer</module>
		<module>libs/core</module>
		<module>libs/nio</module>
		<module>libs/cli</module>
		<module>libs/dissect</module>
		<module>libs/geometry</module>
		<module>libs/grok</module>
		<module>libs/plugin-classloader</module>
		<module>libs/secure-sm</module>
		<module>libs/ssl-config</module>
		<module>libs/x-content</module>
		<module>server</module>
		<module>modules/aggs-matrix-stats</module>
		<module>modules/scripting-painless-spi</module>
		<module>modules/lang-painless</module>
		<module>modules/analysis-common</module>
		<module>modules/geo</module>
		<module>modules/ingest-common</module>
		<module>modules/ingest-geoip</module>
		<module>modules/ingest-user-agent</module>
		<module>modules/transport-netty4</module>
		<module>modules/reindex</module>
		<module>modules/kibana</module>
		<module>modules/lang-expression</module>
		<module>modules/lang-mustache</module>
		<module>modules/mapper-extras</module>
		<module>modules/parent-join</module>
		<module>modules/percolator</module>
		<module>modules/rank-eval</module>
		<module>modules/repository-url</module>
		<module>tools/java-version-checker</module>
		<module>tools/keystore-cli</module>
		<module>tools/launchers</module>
		<module>tools/jar-relocator</module>
		<module>tools/plugin-cli</module>
		<module>distribution</module>
	</modules>
	<properties>
		<elasticsearch.version>7.10.3</elasticsearch.version>
		<lucene.version>8.9.0</lucene.version>
		<checkstyle.version>8.20</checkstyle.version>
		<spatial4j.version>0.7</spatial4j.version>
		<jts.version>1.15.0</jts.version>
		<jackson.version>2.10.5</jackson.version>
		<snakeyaml.version>1.28</snakeyaml.version>
		<icu4j.version>69.1</icu4j.version>
		<supercsv.version>2.4.0</supercsv.version>
		<log4j.version>2.11.2</log4j.version>
		<slf4j.version>1.7.30</slf4j.version>
		<jna.version>5.5.0</jna.version>
		<netty.version>4.1.65.Final</netty.version>
		<joda.version>2.10.10</joda.version>
		<bouncycastle.version>1.68</bouncycastle.version>
		<randomizedrunner.version>2.7.1</randomizedrunner.version>
		<junit.version>4.13.2</junit.version>
		<httpclient.version>4.5.13</httpclient.version>
		<httpcore.version>4.4.14</httpcore.version>
		<httpasyncclient.version>4.1.4</httpasyncclient.version>
		<commonslogging.version>1.2</commonslogging.version>
		<commonscodec.version>1.15</commonscodec.version>
		<hamcrest.version>2.1</hamcrest.version>
		<securemock.version>1.2</securemock.version>
		<mocksocket.version>1.2</mocksocket.version>
		<jmh.version>1.19</jmh.version>
	</properties>
	<profiles>
		<profile>
			<id>build</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>test/framework</module>
			</modules>
		</profile>
		<profile>
			<id>buildWithTests</id>
		</profile>
		<profile>
			<id>buildAndPackaging</id>
		</profile>
	</profiles>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<release>11</release>
						<encoding>UTF-8</encoding>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
					<executions>
						<execution>
							<id>source-jar</id>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.1</version>
					<configuration>
						<useSystemClassLoader>false</useSystemClassLoader>
						<argLine>-Duser.language=en -Duser.region=US
							-Djava.locale.providers=SPI,COMPAT
							-Des.set.netty.runtime.available.processors=false</argLine>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
					<configuration>
						<archive>
							<manifest>
								<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
								<addBuildEnvironmentEntries>true</addBuildEnvironmentEntries>
							</manifest>
							<manifestEntries>
								<X-Compile-Fesen-Version>${project.version}</X-Compile-Fesen-Version>
								<X-Compile-Fesen-Snapshot>false</X-Compile-Fesen-Snapshot>
								<X-Compile-Elasticsearch-Version>${elasticsearch.version}</X-Compile-Elasticsearch-Version>
								<X-Compile-Lucene-Version>${lucene.version}</X-Compile-Lucene-Version>
								<X-Compile-Target-JDK>11</X-Compile-Target-JDK>
								<X-Compile-Source-JDK>11</X-Compile-Source-JDK>
								<Change>${git.commit.id}</Change>
								<Build-Date>${maven.build.timestamp}</Build-Date>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.2</version>
					<configuration>
						<updateReleaseInfo>true</updateReleaseInfo>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.2.0</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<docencoding>UTF-8</docencoding>
						<charset>UTF-8</charset>
					</configuration>
					<executions>
						<execution>
							<phase>site</phase>
							<goals>
								<goal>javadoc</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-jxr-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>pl.project13.maven</groupId>
					<artifactId>git-commit-id-plugin</artifactId>
					<version>4.0.3</version>
					<executions>
						<execution>
							<id>get-the-git-infos</id>
							<goals>
								<goal>revision</goal>
							</goals>
							<phase>validate</phase>
						</execution>
					</executions>
					<configuration>
						<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
